// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup renders with large props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin-left: 0px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 5;
}

.emotion-2 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  background-color: #e07800ff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #ffffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 64px;
  height: 64px;
  font-size: 24px;
  line-height: 32px;
  border-radius: 50%;
}

.emotion-4 {
  margin-left: -20px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 4;
}

.emotion-7 {
  margin-left: -20px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 3;
}

.emotion-10 {
  margin-left: -20px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 2;
}

.emotion-13 {
  margin-left: -20px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 1;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            A
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-4"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            B
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-7"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            C
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-10"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            D
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-13"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            E
          </span>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`AvatarGroup renders with medium props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin-left: 0px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 5;
}

.emotion-2 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  background-color: #e07800ff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #ffffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 40px;
  height: 40px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

.emotion-4 {
  margin-left: -12px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 4;
}

.emotion-7 {
  margin-left: -12px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 3;
}

.emotion-10 {
  margin-left: -12px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 2;
}

.emotion-13 {
  margin-left: -12px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 1;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            A
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-4"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            B
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-7"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            C
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-10"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            D
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-13"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            E
          </span>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`AvatarGroup renders with zIndexAscend 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin-left: 0px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 0;
}

.emotion-2 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  background-color: #c2c2c2ff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #ffffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

.emotion-4 {
  margin-left: -8px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 1;
}

.emotion-7 {
  margin-left: -8px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 2;
}

.emotion-10 {
  margin-left: -8px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 3;
}

.emotion-13 {
  margin-left: -8px;
  border: solid 2px #ffffffff;
  border-radius: 50%;
  z-index: 4;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            A
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-4"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            B
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-7"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            C
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-10"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            D
          </span>
        </div>
      </div>
    </span>
    <span
      class="emotion-13"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <span
            style="transform: scale(1);"
          >
            E
          </span>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;
